--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,6 @@ botocore>=1.26.10
 filetype==1.0.7
 requests>=2.20.0, <3
 urllib3<1.27, >=1.25.4
-tqdm
+tqdm~=4.64.1
+pandas~=1.1.5
+setuptools~=59.6.0
